# icp1_s21

./: CMakeLists.txt
include/: netcommon.h
sslversion/: CMakeLists.txt  sslversion.c
timeServerSSL/: CMakeLists.txt  cert.pem  gencert.bat  key.pem  timeServerSSL.c
webServerCertInfo/: CMakeLists.txt  webServerCertInfo.c
